# study_notes

GenerativeAI/: .gitignore  README.md
GenerativeAI/chapter3/: README.md  pyproject.toml
GenerativeAI/chapter3/src/: advanced_role_example.py  call_api_with_retry.py  conditional_branch_template.py  contextual_translate.py  controlled_chat.py  cost_monitor.py  evaluate_translation.py  get_cached_response.py  max_tokens.py  prompt_template.py  response_format.py  seed.py  split_text.py
GenerativeAI/chapter4/: pyproject.toml
GenerativeAI/chapter4/src/: add_conditional_edges.ipynb  chain.py  chain_api.py  chain_multiple.py  chatbot_basic.py  chatbot_faq.py  env_config.py  fan_out_fan_in_and_roop.ipynb  human_in_the_loop.py  json_output_parser.py  memory.py  prompt_template.py  prompt_template_api.py  prompt_template_multiple.py  pydantic_output_parser.py  str_output_parser.py  tool.py  tool_api.py
GenerativeAI/chapter5/src/: complete_rag_pipeline.py  hybrid_search_rrf.py  minimal_rag_chroma.py  pyproject.toml  search_comparison.py  simple_hybrid_search.py
GenerativeAI/chapter6/src/: app.py  judge.py  pyproject.toml  update_prompt.py
GenerativeAI/chapter7/: pyproject.toml
GenerativeAI/chapter7/src/: langgraph_search.py  rag_agent.py  react_search.py
Potepan/log/: 20251006.md  20251009.md  20251010.md  20251013.md
Potepan/log/202509/: 20250911.md
Potepan/notes/: html.md
Potepan/notes/Rails/: CRUD.md  Controller.md  (+4 more)
docs/log/: 20250915.md  20250917.md  20250918.md  20250922.md  20250926.md  20250927.md  20251016.md  原本.md
docs/notes/: css.md  html.md
(+57 files in other folders)
