[project]
name = "chapter7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "chromadb>=1.5.8",
    "langchain==1.0.3",
    "langchain-community==0.4.1",
    "langchain-core>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai==1.0.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph==1.0.2",
    "langgraph-prebuilt==1.0.8",
    "python-dotenv==1.2.1",
    "requests>=2.33.1",
]
